# bilidown_tauri

./: .gitignore  README.md  package-lock.json  package.json
src/: about.html  about.js  index.html  main.js  settings.html  settings.js  styles.css  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  down_bangumi.rs  down_bv.rs  init_.rs  lib.rs  main.rs  progress.rs  qrcode_login.rs  refresh_cookie.rs  resolution.rs  wbi.rs
