[package]
name = "bilidown_tauri"
version = "0.1.0"
authors = ["Rinee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bilidown_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = [
    "json",
    "multipart",
    "cookies",
    "stream",
    "blocking",
] }
tokio = { version = "1.42.0", features = ["full"] }
qrcode = "0.14.1"
anyhow = "1.0"
resvg = "0.44.0"
usvg = "0.44.0"
tiny-skia = "0.11.4"
urlencoding = "2.1.3"
chrono = "0.4.39"
md5 = "*"
indicatif = "0.17.9"
futures = "0.3.31"
futures-util = "0.3.31"
regex = "1.11.1"
rsa = "0.9.7"
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.8.5"
scraper = "0.22.0"
image = { version = "0.25", features = ["jpeg", "png"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
